# cilqr_C-

./: CMakeLists.txt  compile_and_run.sh  run.sh
include/: ad_log.h
include/acc_model/: acc_model.hpp
include/cilqr_joint_planner/: cilqr_joint_planner.hpp
include/cilqr_optimizer/: cilqr_config.hpp  cilqr_constructor.hpp  cilqr_obstacles.hpp  cilqr_utils.hpp
include/common_utils/: data_struct.hpp  utils.hpp
include/plot_utils/: acc_and_cruise_plot.hpp  boundary_plot.hpp
src/: interface.cpp  interface.h
src/cilqr_joint_planner/: cilqr_joint_planner.cpp
src/cilqr_optimizer/: cilqr_constructor.cpp  cilqr_obstacles.cpp  cilqr_utils.cpp
src/common_utils/: utils.cpp
src/optimize/: fem_pos_deviation_osqp_interface.cpp  fem_pos_deviation_osqp_interface.hpp  fem_pos_deviation_smoother.cpp  fem_pos_deviation_smoother.hpp  fem_pos_deviation_sqp_osqp_interface.cpp  fem_pos_deviation_sqp_osqp_interface.hpp  mpc_osqp.cpp  mpc_osqp.hpp
src/optimize/speedoptimize/: mpc_osqp.cpp  mpc_osqp.hpp  mpc_solver.hpp  profile.hpp  speed_mpc_solver.cpp  speed_mpc_solver.hpp
src/test/: acc_test.cpp  boundary_test.cpp
